Fixed overflow Y and extended container

--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,15 @@ body {
 main {
   width: 80vw;
   margin: 5rem auto 0;
-  height: 800px;
+  height: 500px;
 }
 section {
-  /* margin: 3rem auto 0;
-  height: 600px;
+  margin: 0 auto;
+  /* height: 600px; */
   max-width: 800px;
-  text-align: center;
-  position: relative;
-  overflow: hidden; */
+  /* text-align: center; */
+  /* position: relative; */
+  /* overflow: hidden; */
   position: relative;
 }
 
@@ -48,7 +48,7 @@ section {
   margin: 3rem auto 0;
   display: flex;
   margin: 3rem auto 0;
-  height: 600px;
+  height: 500px;
   max-width: 800px;
   text-align: center;
   position: relative;
@@ -62,7 +62,7 @@ section {
   width: 100%;
   height: 90%;
   text-align: center;
-  margin: 1rem;
+  margin: 1rem 0;
   opacity: 0;
   transition: all 0.3s linear;
 }
@@ -87,6 +87,7 @@ section {
   margin: 2rem auto 0;
   color: #617d98;
   line-height: 2;
+  word-wrap: break-word;
 }
 
 .title {
@@ -125,11 +126,11 @@ section {
 }
 
 .left {
-  left: 0;
+  left: -15px;
 }
 
 .right {
-  right: 0;
+  right: -15px;
 }
 
 .next {
